add reference to bosh help --all to BOSH landing page (index.html)

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -36,8 +36,11 @@ infrastructure-agnostic.
 This section provides both a starting point for novices and a fresh view
 for experts.
 
-* **BOSH Command Line Interface (CLI)**: The primary operator interface to BOSH. An operator uses the BOSH CLI to interact with the BOSH Director and perform actions on the cloud. Run `bosh help --all` to see all available BOSH commands.
-
+* [BOSH Command Line Interface (CLI)](https://github.com/cloudfoundry/bosh#installing-bosh-gems): The primary
+operator interface to BOSH.
+An operator uses the BOSH CLI to interact with the BOSH Director and perform
+actions on the cloud.
+Run `bosh help --all` to see all available BOSH commands.
 * [Glossary](glossary.html)
 * [What BOSH is and Why it's Different](what-bosh-is.html)
 * [Basic BOSH Workflow](workflow.html)
