Updates to the glossary after discussion with PMs

--- a/glossary.html.md.erb
+++ b/glossary.html.md.erb
@@ -1,10 +1,6 @@
 ---
-title: BOSH Glossary
+title: BOSH Terminology
 ---
-
-Several familiar terms take on new meanings when you use them to talk about BOSH.
-The "language" of BOSH also includes some terms you won't find anywhere else.
-It is a good idea to read through this glossary as you are first getting to know BOSH.
 
 | Term          | Definition   |
 | ------------- | ------------ |
