--- a/bosh-components.html.md.erb
+++ b/bosh-components.html.md.erb
@@ -2,10 +2,13 @@
 title: BOSH Components
 ---
 
-This topic describes the components of BOSH.
+This topic describes the components of BOSH and provides an example component interaction.
+
 <%= image_tag("/images/components.png") %>
 
-## <a id="agent"></a>Agent ##
+## <a id="list"></a>List of BOSH Components ##
+
+### <a id="agent"></a>Agent ###
 BOSH creates an Agent on every VM that BOSH deploys.
 A BOSH Agent listens for instructions from the BOSH Director to the VM and
 carries out those instructions.
@@ -18,7 +21,7 @@ These instructions include which packages to install and how to configure those
 packages.
 The Agent uses these instructions to install and configure MySQL on the VM.
 
-## <a id="blobstore"></a>Blobstore ##
+### <a id="blobstore"></a>Blobstore ###
 The BOSH Blobstore stores the source forms of releases and packages and the
 compiled images of BOSH packages.
 An operator uploads a release using the BOSH CLI, and the Director inserts the
@@ -26,27 +29,27 @@ release into the Blobstore.
 When you deploy a release, BOSH orchestrates the compilation of packages and
 stores the result in the Blobstore.
 
-## <a id="cli"></a>BOSH Command Line Interface (CLI) ##
+### <a id="cli"></a>BOSH Command Line Interface (CLI) ###
 The BOSH Command Line Interface (CLI) is the primary operator interface to BOSH.
 An operator uses the CLI to interact with the BOSH Director and perform actions
 on the cloud.
 
-## <a id="database"></a>BOSH Database ##
+### <a id="database"></a>BOSH Database ###
 The BOSH Director uses a Postgres database to store information about the
 desired state of a BOSH deployment.
 This includes information about releases, packages, stemcells, and deployments.
 
-## <a id="name-server"></a>BOSH DNS Name Server ##
+### <a id="name-server"></a>BOSH DNS Name Server ###
 BOSH uses PowerDNS to provide DNS resolution between the VMs in a BOSH
 deployment.
 
-## <a id="cpi"></a>Cloud Provider Interface (CPI) ##
+### <a id="cpi"></a>Cloud Provider Interface (CPI) ###
 A Cloud Provider Interface (CPI) is an API that BOSH uses to interact with an
 Infrastructure as a Service (IaaS) provider to create and manage stemcells and
 VMs.
 A CPI abstracts the cloud infrastructure from the rest of BOSH.
 
-## <a id="director"></a>Director ##
+### <a id="director"></a>Director ###
 The BOSH Director is the core orchestrating component in BOSH.
 The Director controls VM creation and deployment, as well as other software and
 service lifecycle events.
@@ -60,40 +63,40 @@ The Director creates actionable tasks:
 Once created, the Director adds these tasks to the Task Queue.
 BOSH Worker processes take tasks from the Task Queue and act on them.
 
-## <a id="health-monitor"></a>Health Monitor ##
+### <a id="health-monitor"></a>Health Monitor ###
 The Health Monitor uses status and lifecycle events received from BOSH Agents to
 monitor the health of VMs.
 If the Health Monitor detects a problem with a VM, it can send an alert through
 a notification plugin, or trigger the BOSH Resurrector.
 
-## <a id="nats"></a>Message Bus (NATS) ##
+### <a id="nats"></a>Message Bus (NATS) ###
 The Director and the Agents communicate through a lightweight publish-subscribe
 and distributed queueing messaging system called NATS.
 These messages have two purposes: to confirm the health of the Agent, and to
 inform the Director about changes in the health of monitored processes.
 
-## <a id="registry"></a>Registry ##
+### <a id="registry"></a>Registry ###
 When BOSH creates or updates a VM, BOSH stores the following VM configuration
 information in the registry:
 
 * IP addresses for the network interface, gateway, and netmask
 * IDs for the volume reserved for the VM, for the VM itself, and for disks and other devices
 
-## <a id="resurrector"></a>Resurrector ##
+### <a id="resurrector"></a>Resurrector ###
 If enabled, the BOSH Resurrector plugin automatically recreates VMs identified
 by the Health Monitor as stopped or unresponsive.
 
-## <a id="queue"></a>Task Queue ##
+### <a id="queue"></a>Task Queue ###
 An asynchronous queue used by the BOSH Director and Workers to manage tasks.
 The Task Queue resides in a Redis key-value store.
 
-## <a id="workers"></a>Workers ##
+### <a id="workers"></a>Workers ###
 BOSH Workers take tasks from the Task Queue and act on them.
 
-# <a id="example"></a>Example Component Interaction #
+## <a id="example"></a>Example Component Interaction ##
 This example shows how BOSH components interact when creating a new VM.
 
-## <a id="create-vm"></a>Creating a New VM ##
+### <a id="create-vm"></a>Creating a New VM ###
 <%= image_tag("/images/deploy-sequence.png") %><br />
 
 1. Through the BOSH CLI, the operator takes an action (e.g. deploy for the first
@@ -102,7 +105,7 @@ time, scaling up deployment) which requires creating a new VM.
 1. The Director uses the CPI to tell the IaaS to launch a VM.
 1. The IaaS provides the Director with information (IP addresses and IDs) the
 Agent on the VM needs to configure the VM.
-1. The Director updates the BOSH Registry with the configuration information for 
+1. The Director updates the BOSH Registry with the configuration information for
 the VM.
 1. The Agent running on the VM requests the configuration information for the VM
 from the BOSH Registry.
