Deleted vague instructions.

--- a/deploy-microbosh.html.md.erb
+++ b/deploy-microbosh.html.md.erb
@@ -69,11 +69,8 @@ Download to the directory of your choice, and remember its path for later use.
 The MicroBOSH deployment manifest is a YAML file named `micro-bosh.yml` that should reside in the directory
 created for MicroBOSH (`boshtest/microbosh` in these examples).
 
-If you are using AWS, you can generate the manifest using the BOSH CLI.
-If you are using another IaaS, use a text editor to create the manifest.
-
 To understand general principles of BOSH deployment manifests,
-see [Creating a BOSH Deployment Manifest](./create-manifest.html).
+see [BOSH Deployment Manifest](./create-manifest.html).
 
 ## <a id="deploy"></a> Deploying MicroBOSH  ##
 
