rename create-manifest.html => deployment-manifest.html

--- a/create-release.html.md.erb
+++ b/create-release.html.md.erb
@@ -686,7 +686,7 @@ using a variable of the form:
 
 	<%%= properties.<job_name>.<property_name> %>
 
-1. Specify the property in the [deployment manifest](./create-manifest.html#properties).
+1. Specify the property in the [deployment manifest](./deployment-manifest.html#properties).
 
 Adapt the example below to create any properties your release needs now.
 
@@ -741,7 +741,7 @@ See what releases are available:
   `bosh releases`
 
 If BOSH is already pointing to a release, edit the BOSH deployment manifest.
-Otherwise, [create a manifest] (./create-manifest.html).
+Otherwise, create a manifest. See [BOSH Deployment Manifest](./deployment-manifest.html) for more information.
 
 Upload the new dev release.
 
