--- a/deploy-microbosh.html.md.erb
+++ b/deploy-microbosh.html.md.erb
@@ -70,7 +70,7 @@ The MicroBOSH deployment manifest is a YAML file named `micro-bosh.yml` that sho
 created for MicroBOSH (`boshtest/microbosh` in these examples).
 
 To understand general principles of BOSH deployment manifests,
-see [BOSH Deployment Manifest](./create-manifest.html).
+see [BOSH Deployment Manifest](./deployment-manifest.html).
 
 ## <a id="deploy"></a> Deploying MicroBOSH  ##
 
