--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -36,5 +36,4 @@ Knowledge and skills for developers and other experts.
 
 * [Creating a BOSH Release](create-release.html)
 * [Creating a MicroBOSH Deployment Manifest](create-micro-manifest.html)
-* [Creating a BOSH Deployment Manifest](create-manifest.html)
-
+* [BOSH Deployment Manifest](./deployment-manifest.html)
