--- a/workflow.html.md.erb
+++ b/workflow.html.md.erb
@@ -49,7 +49,7 @@ To deploy BOSH using MicroBOSH you must:
 
 * [Download](http://bosh-artifacts.cfapps.io) a **release** of BOSH, and a **stemcell** appropriate to the cloud infrastructure and OS where you plan to deploy.
 
-* [Create](./create-manifest.html) a **manifest** that accounts for environmental constraints and specifies how you want to orchestrate your deployment.
+* Create a **manifest** that accounts for environmental constraints and specifies how you want to orchestrate your deployment. See [BOSH Deployment Manifest](./deployment-manifest.html) for more information.
 
 ## <a id="deploying"></a> Deploying Software with BOSH  ##
 
