--- a/create-release.html.md.erb
+++ b/create-release.html.md.erb
@@ -291,7 +291,7 @@ We add this compile-time dependency to our example dependency graph.
 
 The complete dependency graph for `ardo-release` looks like this:
 
-    <%= image_tag("dep-graph.png") %>
+<%= image_tag("./images/dep-graph.png") %><br />
 
 For a large or complicated release, consider making more than one dependency
 graph.
