--- a/deployment-manifest.html.md.erb
+++ b/deployment-manifest.html.md.erb
@@ -16,12 +16,14 @@ UUID of the BOSH Director managing the deployment
 * [Compilation Block](#compilation): Properties of compilation VMs
 * [Update Block](#update): Defines how BOSH updates job instances during
 deployment
-* [Resource Pools Block](#resource_pools): Properties of VMs that BOSH creates
+* [Resource Pools Block](#resource-pools): Properties of VMs that BOSH creates
 and manages
 * [Networks Block](#networks): Network configuration information
 * [Jobs Block](#jobs): Configuration and resource information for jobs
 * [Properties Block](#properties): Describes global properties and generalized
 configuration information
+
+The examples below originate from a [sample deployment manifest](./sample-manifest.html).
 
 ## <a id='deployment'></a>Deployment Identification ##
 
@@ -29,12 +31,25 @@ configuration information
 
 **director_uuid** [String, required]: This string must match the UUID of the currently targeted BOSH Director for the BOSH CLI to allow any operations on the deployment. Use `bosh status` to display the UUID of the currently targeted BOSH Director.
 
+Example:
+<pre class='terminal'>
+name: sample-errand
+director\_uuid: 1234abcd-5678-efab-9012-3456cdef7890
+</pre>
+
 ## <a id='releases'></a>Releases Block ##
 
 **releases** [Hash, required]: The name and version of each release in the deployment.
 
 * **name** [String, required]: Name of a release name used in the deployment
 * **version** [String, required]: The version of the release to use
+
+Example:
+<pre class='terminal'>
+releases:
+- name: go\_sample
+  version: latest
+</pre>
 
 ## <a id='compilation'></a>Compilation Block ##
 
@@ -44,6 +59,17 @@ configuration information
 * **workers** [Integer, required]: The maximum number of compilation VMs.
 * **network** [String, required]: References a valid network name defined in the Networks block. BOSH assigns network properties to compilation VMs according to the type and properties of the specified network.
 * **cloud_properties** [Hash, required]: Describes any IaaS-specific properties needed to create compilation VMs. Examples: `instance_type`, `availability_zone`
+
+Example:
+<pre class='terminal'>
+compilation:
+  reuse\_compilation\_vms: true
+  workers: 2
+  network: default
+  cloud\_properties:
+    instance\_type: c1.medium
+    availability\_zone: us-east-1c
+</pre>
 
 ## <a id='update'></a>Update Block ##
 
@@ -58,9 +84,18 @@ configuration information
 * **update\_watch\_time** [Integer or Range, required]: The time to wait for non-canary instances to declare an updated job healthy or unhealthy.
 * **max\_in\_flight** [Integer, required]: The maximum number of non-canary instances to update in parallel.
 
-## <a id='resource_pools'></a>Resource Pools Block ##
+Example:
+<pre class='terminal'>
+update:
+  canaries: 1
+  canary\_watch\_time: 30000-240000
+  update\_watch\_time: 30000-600000
+  max\_in\_flight: 3
+</pre>
 
-**resource_pools** [Hash, required]: Specifies the [resource pools](./glossary.html#resource_pools) a deployment uses. A deployment manifest can describe multiple resource pools and uses unique names to identify and reference them.
+## <a id='resource-pools'></a>Resource Pools Block ##
+
+**resource_pools** [Hash, required]: Specifies the [resource pools](./glossary.html#resource-pools) a deployment uses. A deployment manifest can describe multiple resource pools and uses unique names to identify and reference them.
 
 * **name** [String, required]: A unique name used to identify and reference the resource pool
 * **network** [String, required]: References a valid network name defined in the Networks block. Newly created resource pool VMs use the described configuration.
@@ -71,9 +106,26 @@ configuration information
 * **cloud_properties** [Hash, required]: Describes any IaaS-specific properties needed to create compilation VMs. Examples: `instance_type`, `availability_zone`
 * **env** [Hash, optional]: Describes the VM environment and provide a specific VM environment to the CPI `create_stemcell` call. `env` data is available to BOSH Agents as VM settings. Default is {} (empty Hash).
 
+Example:
+<pre class='terminal'>
+resource\_pools:
+- name: default
+  network: default
+  size: 2
+  stemcell:
+    name: bosh-aws-xen-centos
+    version: 2366
+  cloud\_properties:
+    instance\_type: m1.small
+    availability\_zone: us-east-1c
+</pre>
+
 ## <a id='networks'></a>Networks Block ##
 
 **networks** [Hash, required]: Each sub-block listed in the Networks block specifies a network configuration that jobs can reference. There are three different network types: `manual`, `dynamic`, and `vip`.
+
+* **name** [String, required]: Name used to reference this network configuration
+* **type** [String, required]: `manual`, `dynamic`, and `vip`
 
 ### Manual ###
 
@@ -106,6 +158,24 @@ A `vip` network is a collection of virtual IPs (for example, EC2 elastic IPs) th
 
 * **cloud_properties** [Hash, optional]: Describes any IaaS-specific properties for the network.
 
+Example:
+<pre class='terminal'>
+networks:
+- name: default
+  type: manual
+  subnets:
+  - range: 10.10.0.0/24
+    gateway: 10.10.0.1
+    static:
+    - 10.10.0.16 - 10.10.0.18
+    reserved:
+    - 10.10.0.2 - 10.10.0.15
+    dns:
+    - 10.10.0.6
+    cloud\_properties:
+      subnet: subnet-d597b993
+</pre>
+
 ## <a id='jobs'></a>Jobs Block ##
 
 **jobs** [Hash, required]: Specifies the mapping between BOSH release [jobs](./glossary.html#job) and cloud instances. Jobs are defined in the BOSH release. The Jobs block defines how BOSH associates jobs with the VMs started by the IaaS. The most commonly used job properties are:
@@ -115,7 +185,7 @@ A `vip` network is a collection of virtual IPs (for example, EC2 elastic IPs) th
     * **name** [String, required]: The job template name
     * **version** [String, required]: The release where the job template exists
 * **persistent_disk** [Integer, optional]: Specifies the persistent disk size; defaults to 0 (no persistent disk). If `persistent_disk` is a positive integer, BOSH creates a persistent disk of that size in megabytes and attaches it to each job instance VM.
-* **properties** [Hash, optional]: Specifies job properties. Properties allow BOSH to configure jobs to a specific environment. `properties` defined in a job block are accessible only to that job, and override any identically named global properties.
+* **properties** [Hash, optional]: Specifies job properties. Properties allow BOSH to configure jobs to a specific environment. `properties` defined in a Job block are accessible only to that job, and override any identically named global properties.
 * **resource_pool** [String, required]: A valid resource pool name from the Resource Pools block. BOSH runs instances of this job in a VM from the named resource pool.
 * **update** [Hash, optional]: Specific update settings for this job. Use this to overriding global job update settings on a per-job basis.
 * **instances** [Integer, required]: The number of job instances. Each instance is a VM running this particular job.
@@ -124,13 +194,43 @@ A `vip` network is a collection of virtual IPs (for example, EC2 elastic IPs) th
     * **static_ips** [Range, optional]: The range of IP addresses reserved for the job on the network
     * **default** [Array, optional]: Specifies which network components (DNS, Gateway) BOSH populates by default from this network. BOSH references this property if the Networks block defines multiple networks.
 
+Example:
+<pre class='terminal'>
+jobs:
+- name: sample
+  templates:
+  - name: sample\_with\_properties
+    release: go\_sample
+  instances: 1
+  resource\_pool: default
+  networks:
+  - name: default
+    default: [dns, gateway]
+  properties:
+    output\_value: 'I am stdout'
+    error\_value: 'I am stderr'
+
+- name: sample_errand
+  templates:
+  - name: sample\_with\_properties
+    release: sample
+  instances: 1
+  resource\_pool: default
+  networks:
+  - name: default
+    default: [dns, gateway]
+  properties:
+    output\_value: 'I am stdout'
+    error\_value: 'I am stderr'
+</pre>
+
 ## <a id='properties'></a>Properties Block ##
 
 **properties**: Describes global properties and general configuration information.
 
 Global properties allow BOSH to configure jobs to a specific environment. `properties` defined in the [Properties](#properties) block are accessible to all jobs. Any identically named `properties` in the [Jobs](#jobs) block will override the global property for that job.
 
-General configuration information originates from the template spec file of a job in a BOSH release. By moving this information from the release into the manifest, changes to a deployment are made by changing the manifest, with no need to change the release. Because a BOSH release is much larger and complex than the deployment manifest for the release, changing the manifest is invariably faster and easier than changing the release.
+By default, general configuration information resides in the template spec file of a job in a BOSH release. If you move this information from the release into the manifest, you can reconfigure a deployment by changing the manifest instead of the release.
 
 General configuration information is added to the manifest in a sub-block of the Properties block. The name of the job template identifies the sub-block.
 
@@ -142,6 +242,14 @@ Typical general configuration information includes but is not limited to:
 * Host names
 * IP addresses
 * Port numbers
+
+Example:
+<pre class='terminal'>
+properties:
+  sample\_with\_properties:
+    output\_value: 'I am stdout'
+    error\_value: 'I am stderr'
+</pre>
 
 ### <a id='properties'></a>Job Property Precedence ###
 
