--- a/deployment-manifest.html.md.erb
+++ b/deployment-manifest.html.md.erb
@@ -209,7 +209,7 @@ jobs:
   properties:
     output\_value: 'I am stdout'
     error\_value: 'I am stderr'
-- name: sample_errand
+- name: sample\_errand
   templates:
   - name: sample\_with\_properties
     release: sample
