--- a/sample-manifest.html.md.erb
+++ b/sample-manifest.html.md.erb
@@ -26,7 +26,7 @@ update:
   canaries: 1
   canary_watch_time: 30000-240000
   update_watch_time: 30000-600000
-  max\_in\_flight: 3
+  max_in_flight: 3
 
 resource_pools:
 - name: default
@@ -82,7 +82,7 @@ jobs:
     error_value: 'I am stderr'
 
 properties:
-  sample\_with\_properties:
+  sample_with_properties:
     output_value: 'I am stdout'
     error_value: 'I am stderr'
 </pre>
