add links to and from sample-manifest doc

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -36,4 +36,5 @@ Knowledge and skills for developers and other experts.
 
 * [Creating a BOSH Release](create-release.html)
 * [Creating a MicroBOSH Deployment Manifest](create-micro-manifest.html)
-* [BOSH Deployment Manifest](./deployment-manifest.html)
+* [Understanding the BOSH Deployment Manifest](./deployment-manifest.html)
+* [Sample BOSH Deployment Manifest](./sample-manifest.html)
