--- a/sample-manifest.html.md.erb
+++ b/sample-manifest.html.md.erb
@@ -2,7 +2,7 @@
 title: Sample BOSH Deployment Manifest
 ---
 
-The following is the contents of a sample BOSH deployment manifest.
+The following is a sample BOSH deployment manifest. See [Understanding the BOSH Deployment Manifest](./deployment-manifest.html) for an explanation of the manifest contents.
 
 <pre class='terminal'>
 
