--- a/deployment-manifest.html.md.erb
+++ b/deployment-manifest.html.md.erb
@@ -1,5 +1,5 @@
 ---
-title: BOSH Deployment Manifest
+title: Understanding the BOSH Deployment Manifest
 ---
 
 The BOSH deployment manifest is a YAML file that defines the components and
