--- a/deploy-microbosh.html.md.erb
+++ b/deploy-microbosh.html.md.erb
@@ -33,9 +33,9 @@ You create a directory for each, such that the path to your MicroBOSH deployment
 
 <%= image_tag("bosh-directories-2-level.png") %>
 
-### <a id="cli"></a> Install the BOSH CLI  ###
+### <a id="cli"></a> Install the BOSH Command Line Interface  ###
 
-[Install the BOSH CLI](./bosh-cli.html)
+[Install the BOSH CLI](./bosh-cli.html).
 
 ### <a id="cloud"></a> Set up a deployment area in the cloud ###
 
