add bosh-cli.html to index

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -22,8 +22,8 @@ freeing operators from concerns about differences between environments.
 
 ## <a id="working"></a> Working with BOSH ##
 
-The [BOSH Command Line Interface (CLI)](https://github.com/cloudfoundry/bosh#installing-bosh-gems) is the primary
-operator interface to BOSH.
+The [BOSH Command Line Interface (CLI)](./bosh-cli.html) is the primary operator
+interface to BOSH.
 Run `bosh help --all` to see all available BOSH commands.
 
 * [Setting Up your IaaS for BOSH](iaas-setup.html)
