--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -22,7 +22,7 @@ freeing operators from concerns about differences between environments.
 
 ## <a id="working"></a> Working with BOSH ##
 
-The [BOSH Command Line Interface (CLI)](./bosh-cli.html) is the primary operator
+The [BOSH Command Line Interface (CLI)](bosh-cli.html) is the primary operator
 interface to BOSH.
 Run `bosh help --all` to see all available BOSH commands.
 
