reword sentence in bosh-cli.html

--- a/bosh-cli.html.md.erb
+++ b/bosh-cli.html.md.erb
@@ -4,8 +4,7 @@ title: BOSH Command Line Interface
 
 **NOTE**: The latest patch of Ruby 1.9.3 is a prerequisite for installing the BOSH CLI. Ruby 2.x is not supported.
 
-The BOSH Command Line Interface (CLI) is a command line interface used to interact with MicroBOSH and BOSH.
-Before you can use MicroBOSH or BOSH, you need to install the BOSH CLI.
+The BOSH Command Line Interface (CLI) is a required tool for interacting with MicroBOSH and BOSH.
 
 Run this command to install BOSH CLI with the MicroBOSH plugin:
 
