--- a/create-release.html.md.erb
+++ b/create-release.html.md.erb
@@ -321,7 +321,7 @@ In the job `spec` file, the `templates` block contains key/value pairs where:
 The file paths that you provide for templates are relative to
 the `/var/vcap/jobs/<job_name>` directory on the VM.
 For example, `bin/ctl` becomes `/var/vcap/jobs/<job_name>/bin/ctl` on the job VM.
-Using `bin` as the directory where theses files go is a convention.
+Using `bin` as the directory where these files go is a convention.
 
 In our example, we edit the `spec` files for the both the `web_ui` and `bg_worker` jobs.
 The updated `spec` file for the `bg_worker` job looks like this:
