change link in index to 'understanding-bosh.html'

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -16,7 +16,7 @@ freeing operators from concerns about differences between environments.
 ## <a id="foundations"></a> BOSH Foundations ##
 
 * [BOSH Terminology](glossary.html)
-* [What BOSH is and Why it's Different](what-bosh-is.html)
+* [Understanding BOSH]](understanding-bosh.html)
 * [BOSH Components](bosh-components.html)
 * [Basic BOSH Workflow](workflow.html)
 
