--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -15,7 +15,7 @@ freeing operators from concerns about differences between environments.
 
 ## <a id="foundations"></a> BOSH Foundations ##
 
-* [BOSH Terminology](glossary.html)
+* [BOSH Terminology](terminology.html)
 * [Understanding BOSH]](understanding-bosh.html)
 * [BOSH Components](bosh-components.html)
 * [Basic BOSH Workflow](workflow.html)
